Started Knights tour

--- a/.recommenders/caches/identified-project-coordinates.json
+++ b/.recommenders/caches/identified-project-coordinates.json
@@ -1,1 +1,1 @@
-[[{"location":"/usr/lib/jvm/java-7-openjdk-amd64","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.7"}},"jre:jre:1.7.0"],[{"location":"/home/sauce/java-2810/TicTacToe","type":"PROJECT","hints":{"PROJECT_NAME":"TicTacToe"}},"ABSENT"]]
+[[{"location":"/home/sauce/java-2810/TicTacToe","type":"PROJECT","hints":{"PROJECT_NAME":"TicTacToe"}},"ABSENT"],[{"location":"/usr/lib/jvm/java-7-openjdk-amd64","type":"JRE","hints":{"EXECUTION_ENVIRONMENT":"JavaSE-1.7"}},"jre:jre:1.7.0"]]
